Fix contact widget spacing

--- a/styles/Contact/Contact.module.scss
+++ b/styles/Contact/Contact.module.scss
@@ -15,7 +15,7 @@
     margin: 0;
     display: flex;
     align-items: center;
-    gap: 1.5rem;
+    gap: 1rem;
 
     a {
       display: flex;
