--- a/styles/Works/Project.module.scss
+++ b/styles/Works/Project.module.scss
@@ -21,7 +21,7 @@
 .carousel {
   position: absolute;
   top: 0;
-  left: -5.15rem;
+  left: -8rem;
   width: 32rem;
   height: 20rem;
   border-radius: $border-radius-md;
